# cpp_game_engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
engine/: CMakeLists.txt  build_lib.sh
engine/assets/maps/: map_demo.tmx
engine/include/: Engine.hpp
engine/src/: App.hpp  Engine.cpp  Test.hpp  TextureManager.cpp  TextureManager.hpp  common.hpp  main.cpp  testing.cpp
engine/src/Engine/: Engine.cpp  Engine.hpp  TextureManager.cpp  TextureManager.hpp  common.hpp
engine/src/Engine/Animation/: Animation.cpp  Animation.hpp
engine/src/Engine/Camera/: Camera.cpp  Camera.hpp
engine/src/Engine/Entities/: Character.hpp
engine/src/Engine/Graphics/: TextureManager.cpp  TextureManager.hpp
engine/src/Engine/Inputs/: Input.cpp  Input.hpp
engine/src/Engine/Map/: GameMap.hpp  Layer.hpp  MapParser.cpp  MapParser.hpp  TileLayer.cpp  TileLayer.hpp
engine/src/Engine/Object/: GameObject.hpp  IObject.hpp
engine/src/Engine/Physics/: Colider.hpp  Collider.hpp  CollisionHandler.cpp  CollisionHandler.hpp  Point.hpp  RigidBody.hpp  Transform.hpp  Vector2D.hpp
engine/src/Engine/Timer/: Timer.cpp  Timer.hpp
engine/src/Game/: Game.hpp
engine/src/Game/Characters/: Warrior.cpp  Warrior.hpp
projects/: CMakeLists.txt
projects/iphone_app/: CMakeLists.txt
projects/iphone_app/src/: main.cpp
projects/iphone_app/src/app/: App.hpp
projects/sdl_tutorial/: CMakeLists.txt
projects/sdl_tutorial/src/: main.cpp
projects/sdl_tutorial/src/app/: common.hpp  welcome.cpp  welcome.hpp
